weewx/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: rsync-docker-rsync
  namespace: weewx
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.233
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: rsync-docker
  ports:
    - name: tcp-rsync
      protocol: TCP
      port: 873
      targetPort: 873
