weewx/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: weewx
  namespace: weewx
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: weewx
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: nginx
    - ipBlock:
        cidr: 192.168.1.19/32
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: uptime-kuma
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/16
        - 172.17.0.0/16
        - 172.18.0.0/16
        - 192.168.0.0/16
